--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property = "og:description" content = "Кафе-бар Капрезе в Колодищах. Пицца, обеды с доставкой. Организация праздничных мероприятий">
     <title>Кафе Caprese</title>
   </head>
-  <body style="display: none;">
+  <body>
     <!-- ! ............... MAIN ...................... -->
     <div class="main">
       <div class="container">        
@@ -65,7 +65,8 @@
       <div class="container pizza__container">
         <div class="category pizza__category">
           <hr class="category__line" />
-          <h1 class="category__title">
+          <h1 class="category__title">            
+            <span class="category__title--sticer">Скидка на вынос -10% </span>
             <i class="fa-solid fa-pizza-slice"></i>Пицца</h1>
           <hr class="category__line" />
         </div>
