--- a/pages/delivery.html
+++ b/pages/delivery.html
@@ -29,12 +29,6 @@
     <title>Доставка</title>
   </head>
   <body>
-    <!-- ! ............... MAIN ...................... -->
-    <div class="main">
-      <div class="container">
-        <img class="main__logo" src="../img/logo.png" alt="Caprese" />
-      </div>
-    </div>
     <!-- ! ............... NAVIGATION ................ -->
     <section class="header">
       <div class="container">
@@ -87,7 +81,7 @@
           <ul>
             <li>Доставка при заказе от 30 руб. <span>БЕСПЛАТНА</span>!</li>
             <li>При заказе до 30 руб. &ndash; <span>5 руб</span>.</li>
-            <li>Время доставки <span>30-35 мин</span></li>
+            <li>Время доставки: <span>30-35 мин</span></li>
           </ul>
           <a class="delivery__description--btn" href="tel:+375291371010">
             Заказать доставку
@@ -99,6 +93,7 @@
     <!-- ! ................. FOOTER ..................... -->
     <footer>
       <div class="container">
+        <div style="position:relative;overflow:hidden;"><iframe src="https://yandex.by/map-widget/v1/-/CCUVqLtlDB"  allowfullscreen="true" style="position:relative;"></iframe></div>
         <div class="aside">
           <ul>
             <li><a href="tel:+375291371010"><i class="fa-solid fa-phone-volume"></i>+375 (29) 137 10 10</a></li>
