--- a/pages/lunch.html
+++ b/pages/lunch.html
@@ -29,12 +29,6 @@
     <title>Обеденное меню</title>
   </head>
   <body">
-    <!-- ! ............... MAIN ...................... -->
-    <div class="main">
-      <div class="container">
-        <img class="main__logo" src="../img/logo.png" alt="Caprese" />
-      </div>
-    </div>
     <!-- ! ............... NAVIGATION ................ -->
     <section class="header">
       <div class="container">
@@ -79,7 +73,7 @@
         <div class="category lunch__category" id="lunch">
           <hr class="category__line" />
           <h1 class="category__title">
-            <i class="fa-solid fa-bell-concierge"></i>Обед</h1>
+            <i class="fa-solid fa-bell-concierge"></i>Обеденное меню</h1>
           <span class="lunch__category--caption">с 12:00 до 16:00</span>
           <hr class="category__line" />
         </div>
@@ -88,37 +82,37 @@
           <h2 class="lunch__wrapper--title">Салаты</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Салат Оливье</h3>
+              <h3 class="item__text__name">Оливье</h3>
               <p class="item__text--info">
                 Ветчина, огурец, морковь, картофель, горошек, майонез, зелень
               </p>
             </div>
             <span class="item__gramm">150  </span>
-            <span class="item__cost">3,50  </span>
+            <span class="item__cost">3,80  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Салат Фермерская</h3>
-              <p class="item__text--info">Томаты, огурцы, зелень, сметана</p>
+              <h3 class="item__text__name">Салат из свежих овощей</h3>
+              <p class="item__text--info">Томат, огурец, капуста, фирменная заправка, зелень</p>
             </div>
-            <span class="item__gramm">150  </span>
+            <span class="item__gramm">140  </span>
             <span class="item__cost">3,20  </span>
           </div>
           <!--  ? ..........СУПЫ.......... -->
           <h2 class="lunch__wrapper--title">Супы</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Рассольник по-домашнему</h3>
+              <h3 class="item__text__name">Борщ</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
             <span class="item__gramm">270  </span>
-            <span class="item__cost">3,50  </span>
+            <span class="item__cost">3,80  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Холодник</h3>
+              <h3 class="item__text__name">Фасолевый</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
@@ -130,61 +124,51 @@
           <h2 class="lunch__wrapper--title">Горячие блюда</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Спагетти Болоньезе</h3>
-              <p class="item__text--info">
-                <!--  -->
-              </p>
-            </div>
-            <span class="item__gramm">200  </span>
-            <span class="item__cost">6,80  </span>
-          </div>
-          <div class="lanch__wrapper--item item">
-            <div class="item__text">
               <h3 class="item__text__name">Котлета по-киевски</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">120  </span>
-            <span class="item__cost">6,30  </span>
+            <span class="item__gramm">125  </span>
+            <span class="item__cost">6,00  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">
-                Фаршированный перец со сметаной
+                Тефтели в сливочном соусе
               </h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">120  </span>
-            <span class="item__cost">4,00  </span>
+            <span class="item__gramm">170  </span>
+            <span class="item__cost">6,00  </span>
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">
-                Фаршированный перец со сметаной
+                Гуляш
               </h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">240  </span>
-            <span class="item__cost">7,40  </span>
+            <span class="item__gramm">135  </span>
+            <span class="item__cost">7,00  </span>
           </div>
           <!-- ?  ...........БЛЮДО ДНЯ.......... -->
           <h2 class="lunch__wrapper--title">Блюдо дня</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
               <h3 class="item__text__name">
-                Печенный картофель в фольге с жульеном под сырной корочкой
+                Горшочек с молодым картофелем грибами в соусе
               </h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
-            <span class="item__gramm">250  </span>
-            <span class="item__cost">6,00  </span>
+            <span class="item__gramm">190  </span>
+            <span class="item__cost">5,80  </span>
           </div>
           <!-- ?  ...........ГАРНИРЫ.......... -->
           <h2 class="lunch__wrapper--title">Гарниры</h2>
@@ -200,29 +184,29 @@
           </div>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Рагу овощное</h3>
+              <h3 class="item__text__name">Рис с куркумой</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
             </div>
             <span class="item__gramm">150  </span>
-            <span class="item__cost">2,00  </span>
+            <span class="item__cost">1,70  </span>
           </div>
           <!-- ?  ...........ПЕРЕКУРС.......... -->
           <h2 class="lunch__wrapper--title">Перекус</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Горяий Сэндвич</h3>
-              <p class="item__text--info">Ветчина, томаты, сыр</p>
+              <h3 class="item__text__name">Сэндвичи с ветчиной, томатом и сыром/ горячие</h3>
+              <!-- <p class="item__text--info">Ветчина, томаты, сыр</p> -->
             </div>
-            <span class="item__gramm">150  </span>
-            <span class="item__cost">3,50  </span>
+            <span class="item__gramm">200  </span>
+            <span class="item__cost">6,00  </span>
           </div>
           <!--  ? ...........ДЕСЕРТ.......... -->
           <h2 class="lunch__wrapper--title">Десерт</h2>
           <div class="lanch__wrapper--item item">
             <div class="item__text">
-              <h3 class="item__text__name">Сырники со сметанным соусом</h3>
+              <h3 class="item__text__name">Оладьи со сметанным соусом</h3>
               <p class="item__text--info">
                 <!--  -->
               </p>
