--- a/pages/party.html
+++ b/pages/party.html
@@ -28,13 +28,7 @@
     />
     <title>Обеденное меню</title>
   </head>
-  <body">
-    <!-- ! ............... MAIN ...................... -->
-    <div class="main">
-      <div class="container">
-        <img class="main__logo" src="../img/logo.png" alt="Caprese" />
-      </div>
-    </div>
+  <body>
     <!-- ! ............... NAVIGATION ................ -->
     <section class="header">
       <div class="container">
